--- a/backend/kkomdae/src/main/resources/templates/students.html
+++ b/backend/kkomdae/src/main/resources/templates/students.html
@@ -88,12 +88,17 @@
     <div class="d-flex justify-content-between align-items-center mb-5 ">
         <h2 class="mb-0">학생 장비 대여 현황</h2>
         <div>
-            <a href="/admin/devices" class="btn btn-secondary me-2">
+            <a href="/admin/devices" class="btn btn-secondary me-1">
                 <i class="fas fa-laptop me-1"></i> 기기 목록
             </a>
             <button type="button" class="btn btn-primary" id="sendNotification">
                 <i class="fas fa-bell me-1"></i> 알림 발송
             </button>
+            <form action="/admin/logout" method="post" style="display: inline;">
+                <button type="submit" class="btn btn-danger">
+                    <i class="fas fa-sign-out-alt me-1"></i> 로그아웃
+                </button>
+            </form>
         </div>
     </div>
 
