--- a/backend/kkomdae/src/main/resources/templates/devices.html
+++ b/backend/kkomdae/src/main/resources/templates/devices.html
@@ -30,6 +30,9 @@
     </style>
 </head>
 <body>
+<div class="container mt-3">
+    <img th:src="@{/ssafy.svg}" style="width: 120px; height: 90px;" alt="이미지 설명" />
+</div>
 <div class="container mt-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2 class="mb-0">기기 목록 페이지</h2>
