--- a/backend/kkomdae/src/main/resources/templates/students.html
+++ b/backend/kkomdae/src/main/resources/templates/students.html
@@ -84,6 +84,10 @@
     </style>
 </head>
 <body>
+<div class="container mt-3">
+    <img th:src="@{/ssafy.svg}" style="width: 120px; height: 90px;" alt="이미지 설명" />
+</div>
+
 <div class="container mt-5">
     <div class="d-flex justify-content-between align-items-center mb-5 ">
         <h2 class="mb-0">학생 장비 대여 현황</h2>
