--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_final_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_final_result.xml
@@ -25,7 +25,7 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_step1"
+        android:id="@+id/cl_step"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -34,91 +34,108 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginHorizontal="24dp">
 
-        <FrameLayout
-            android:id="@+id/fl_step1"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:background="@drawable/step_circle_background"
-            android:backgroundTint="@color/blue100"
-            android:gravity="center"
-            app:layout_constraintHorizontal_bias="0.5"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_step1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintEnd_toEndOf="parent">
 
-            <!-- 텍스트 중앙 배치 -->
+            <FrameLayout
+                android:id="@+id/fl_step1"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:background="@drawable/step_circle_background"
+                android:backgroundTint="@color/blue100"
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <TextView
+                    style="@style/Title1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="1"
+                    android:textColor="@color/blue500"
+                    android:textSize="15sp"/>
+            </FrameLayout>
+
             <TextView
-                style="@style/Title1"
+                android:id="@+id/tv_step1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="1"
-                android:textColor="@color/blue500"
-                android:textSize="15sp"/>
-        </FrameLayout>
+                android:text="노트북 외관 촬영"
+                style="@style/Title1"
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toEndOf="@id/fl_step1"
+                app:layout_constraintTop_toTopOf="@id/fl_step1"
+                app:layout_constraintBottom_toBottomOf="@id/fl_step1" />
 
-        <TextView
-            android:layout_width="wrap_content"
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/view_pager"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/fl_step1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp" />
+
+            <LinearLayout
+                android:id="@+id/indicator_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@id/view_pager"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginBottom="8dp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_step2"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="노트북 외관 촬영"
-            style="@style/Title1"
-            app:layout_constraintStart_toEndOf="@id/fl_step1"
-            app:layout_constraintTop_toTopOf="@id/fl_step1"
-            app:layout_constraintBottom_toBottomOf="@id/fl_step1"
-            android:layout_marginStart="16dp"/>
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/view_pager"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/fl_step1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="16dp" />
-
-        <LinearLayout
-            android:id="@+id/indicator_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/view_pager"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-
-        <FrameLayout
-            android:id="@+id/fl_step2"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:background="@drawable/step_circle_background"
-            android:backgroundTint="@color/blue100"
-            android:gravity="center"
             android:layout_marginTop="30dp"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintTop_toBottomOf="@id/cl_step1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/view_pager">
+            app:layout_constraintEnd_toEndOf="parent">
 
-            <!-- 텍스트 중앙 배치 -->
+            <FrameLayout
+                android:id="@+id/fl_step2"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:background="@drawable/step_circle_background"
+                android:backgroundTint="@color/blue100"
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <TextView
+                    style="@style/Title1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="2"
+                    android:textColor="@color/blue500"
+                    android:textSize="15sp"/>
+            </FrameLayout>
+
             <TextView
-                style="@style/Title1"
+                android:id="@+id/tv_step2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="2"
-                android:textColor="@color/blue500"
-                android:textSize="15sp"/>
-        </FrameLayout>
-
-        <TextView
-            android:id="@+id/tv_step2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="노트북 자가진단"
-            style="@style/Title1"
-            app:layout_constraintStart_toEndOf="@id/fl_step2"
-            app:layout_constraintTop_toTopOf="@id/fl_step2"
-            app:layout_constraintBottom_toBottomOf="@id/fl_step2"
-            android:layout_marginStart="16dp"/>
+                android:text="노트북 자가진단"
+                style="@style/Title1"
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toEndOf="@id/fl_step2"
+                app:layout_constraintTop_toTopOf="@id/fl_step2"
+                app:layout_constraintBottom_toBottomOf="@id/fl_step2" />
 
 
         <androidx.cardview.widget.CardView
@@ -129,8 +146,10 @@
             android:layout_marginEnd="24dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="12dp"
             app:layout_constraintTop_toBottomOf="@id/tv_step2"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
@@ -256,18 +275,26 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <FrameLayout
-            android:id="@+id/fl_step3"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:background="@drawable/step_circle_background"
-            android:backgroundTint="@color/blue100"
-            android:gravity="center"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_step3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintTop_toBottomOf="@id/cl_step2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cv_step2">
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <FrameLayout
+                android:id="@+id/fl_step3"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:background="@drawable/step_circle_background"
+                android:backgroundTint="@color/blue100"
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
             <!-- 텍스트 중앙 배치 -->
             <TextView
@@ -298,6 +325,8 @@
             android:layout_marginEnd="24dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="12dp"
             app:layout_constraintTop_toBottomOf="@id/fl_step3"
             android:layout_marginTop="12dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -710,17 +739,26 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
-        <FrameLayout
-            android:id="@+id/fl_step4"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:background="@drawable/step_circle_background"
-            android:backgroundTint="@color/blue100"
-            android:gravity="center"
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_step4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintTop_toBottomOf="@id/cl_step3"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cv_info">
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <FrameLayout
+                android:id="@+id/fl_step4"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:background="@drawable/step_circle_background"
+                android:backgroundTint="@color/blue100"
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
             <TextView
                 style="@style/Title1"
@@ -751,6 +789,8 @@
             android:layout_marginEnd="24dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="12dp"
             app:layout_constraintTop_toBottomOf="@id/fl_step4"
             android:layout_marginTop="12dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -774,6 +814,8 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <Button
             android:id="@+id/btn_submit"
             android:layout_width="0dp"
@@ -781,7 +823,7 @@
             android:backgroundTint="@color/orange500"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cv_note"
+            app:layout_constraintTop_toBottomOf="@id/cl_step4"
             android:text="제출하기"
             style="@style/Title1"
             android:layout_marginHorizontal="24dp"
