--- a/frontend/Kkomdae/app/src/main/res/layout/custom_calendar_dialog.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/custom_calendar_dialog.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="16dp"
+    app:cardCornerRadius="30dp"
     app:cardElevation="4dp"
     android:layout_margin="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -12,8 +12,11 @@
         android:layout_height="wrap_content">
 
         <CalendarView
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/calendarView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <Button
